Fix section 1 on small screen

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,12 @@
     padding: 0;
 }
 
-button{
+button {
     width: fit-content;
     height: fit-content;
 }
 
-.nav-bar-container div{
+.nav-bar-container div {
     margin-left: 10px;
     margin-right: 10px;
 }
@@ -20,18 +20,18 @@ button{
     height: 80px;
     padding: 0 10px;
     background-color: white;
-    font-family: udemy sans,-apple-system,BlinkMacSystemFont,Roboto,segoe ui,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
+    font-family: udemy sans, -apple-system, BlinkMacSystemFont, Roboto, segoe ui, Helvetica, Arial, sans-serif, apple color emoji, segoe ui emoji, segoe ui symbol;
     box-shadow: 0 0 10px 0 #ddd;
 }
 
-.search-bar{
+.search-bar {
     display: flex;
     flex: 1;
     border: 1px solid black;
     border-radius: 50px;
 }
 
-.search-bar input{
+.search-bar input {
     border: none;
     outline: none;
     flex: 1;
@@ -50,7 +50,7 @@ button{
     cursor: pointer;
 }
 
-.categories{
+.categories {
     text-decoration: none;
     border: none;
     background-color: white;
@@ -59,97 +59,99 @@ button{
     padding: 10px;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
 
-.teach{
-    font-family: udemy sans,sf pro text,-apple-system,BlinkMacSystemFont,Roboto,segoe ui,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
+.teach {
+    font-family: udemy sans, sf pro text, -apple-system, BlinkMacSystemFont, Roboto, segoe ui, Helvetica, Arial, sans-serif, apple color emoji, segoe ui emoji, segoe ui symbol;
     font-weight: 400;
     font-size: 14px;
     padding: 10px;
 }
 
-.hover-change{
+.hover-change {
     color: #1c1d1f;
 }
 
-.hover-change:hover{
+.hover-change:hover {
     color: #5624d0;
 }
 
-.shopping-cart{
+.shopping-cart {
     padding: 10px;
 }
 
-.medium-button{
+.medium-button {
     padding: 10px;
     margin-left: 10px;
     cursor: pointer;
 }
 
-.login-button{
+.login-button {
     background-color: white;
 }
 
-.login-button:hover, .lang:hover{
+.login-button:hover,
+.lang:hover {
     background-color: #ddd;
 }
 
-.signup-button{
+.signup-button {
     background-color: #1c1d1f;
 }
 
-.signup-button:hover{
+.signup-button:hover {
     background-color: black;
 }
 
 
-.login-text{
+.login-text {
     color: #1c1d1f;
     font-weight: 400;
     font-size: 20px;
 }
 
-.signup-text{
+.signup-text {
     color: white;
     font-weight: 400;
     font-size: 20px;
 }
 
-.lang{
+.lang {
     background-color: white;
 }
 
-.small-screen{
+.small-screen {
     display: none;
 }
 
-.udemy-logo{
+.udemy-logo {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.logo{
-    width:91px;
-    height:34px;
+.logo {
+    width: 91px;
+    height: 34px;
 }
 
-.buttons{
+.buttons {
     display: flex;
     padding: 0;
     margin: 0;
     justify-content: flex-end;
 }
 
-.sec-1{
+.sec-1 {
     display: flex;
     margin: 10px 10px;
-    background-image: url(https://img-c.udemycdn.com/notices/web_banner/slide_1_image_udlite/b8f46419-eca3-44c1-8ba0-ed2ca89f8884.jpg);
+    position: relative;
+    /* background-image: url(https://img-c.udemycdn.com/notices/web_banner/slide_1_image_udlite/b8f46419-eca3-44c1-8ba0-ed2ca89f8884.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
     margin-left: auto;
     margin-right: auto;
     width: 90%;
@@ -157,11 +159,11 @@ a{
     align-items: center;
 }
 
-.text-card{
+.text-card {
     background-color: white;
     box-shadow: 1px 2px 2px 2px #ddd;
-    width: 392px;
-    height: 150px;
+    width: 400px;
+    height: 160px;
     padding: 24px;
     margin-bottom: 8px;
     margin-left: 60px;
@@ -169,18 +171,20 @@ a{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    position: absolute;
 }
 
-.text-card h1{
+.text-card h1 {
     font-size: 30px;
     margin-bottom: 10px;
 }
 
-@media only screen and (max-width: 1100px){
-    .big-screen{
+@media only screen and (max-width: 1100px) {
+    .big-screen {
         display: none;
     }
-    .nav-bar-container{
+
+    .nav-bar-container {
         justify-content: space-between;
         align-items: center;
         flex: 1;
@@ -188,26 +192,57 @@ a{
         height: 50px;
     }
 
-    .search-and-shop div{
+    .search-and-shop div {
         display: inline;
         align-items: center;
         margin-right: 0;
     }
-    .small-screen{
+
+    .small-screen {
         display: block;
         display: flex;
     }
-    .udemy-logo{
+
+    .udemy-logo {
         display: flex;
         flex: 1;
     }
-    .logo{
+
+    .logo {
         width: 75px;
         height: 28px;
     }
-    .abc{
+
+    .abc {
         display: inline;
         margin-right: 0;
     }
-}
 
+    .alarm {
+        width: 100%;
+        height: 50%;
+    }
+
+    .sec-1 {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-end;
+        margin: auto;
+        margin-top: 10px;
+        /* margin-left: 10px;
+        margin-right: 0; */
+        /* margin: auto; */
+        /* flex-wrap: nowrap; */
+    }
+
+    .text-card {
+        width: 100%;
+        height: 150px;
+        position: relative;
+    }
+
+    .text-card h1 {
+        font-size: 23px;
+        /* margin-bottom: 10px; */
+    }
+}
